--- a/gm-ordersystem/package.json
+++ b/gm-ordersystem/package.json
@@ -10,7 +10,11 @@
     "axios": "^0.19.0",
     "better-scroll": "^1.15.2",
     "core-js": "^2.6.5",
+    "css-loader": "^3.2.0",
     "mint-ui": "^2.2.13",
+    "style-loader": "^1.0.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.1.1"
